--- a/WordSearchApp/app/src/main/res/layout/activity_menu.xml
+++ b/WordSearchApp/app/src/main/res/layout/activity_menu.xml
@@ -21,16 +21,34 @@
         app:lottie_loop="true" />
 
 
-    <Button
-        android:id="@+id/playGameButton"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="71dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="296dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Word Detective"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lottie_anim" />
+
+    <Button
+        android:id="@+id/playGameButton"
+        android:layout_width="228dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="192dp"
+        android:layout_marginBottom="170dp"
         android:background="@drawable/more_round_background"
-        android:backgroundTint="@color/purple"
+        android:backgroundTint="#000000"
         android:paddingLeft="24dp"
         android:paddingTop="16dp"
         android:paddingRight="24dp"
@@ -41,9 +59,38 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lottie_anim"
+        app:layout_constraintVertical_bias="1.0"
         tools:text="Play Game" />
+
+    <Button
+        android:id="@+id/creditsButton"
+        android:layout_width="228dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="90dp"
+        android:background="@drawable/more_round_background"
+        android:backgroundTint="#000000"
+        android:onClick="credits"
+        android:paddingLeft="24dp"
+        android:paddingTop="16dp"
+        android:paddingRight="24dp"
+        android:paddingBottom="16dp"
+        android:text="Credits"
+        android:textAllCaps="true"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lottie_anim"
+        app:layout_constraintVertical_bias="1.0"
+        tools:text="Credits" />
 
 
 </android.support.constraint.ConstraintLayout>
