--- a/WordSearchApp/app/src/main/res/layout/dialog_fail.xml
+++ b/WordSearchApp/app/src/main/res/layout/dialog_fail.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
-        android:text="All words found!"
+        android:text="Game Over! "
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
